# oracle-fusion-knowledge-base

./: .gitignore  LICENSE  Manual.md  README.md  build_knowledge_base.py  gerar_skills.py  pyproject.toml  requirements.txt
config/: entity_aliases.json  knowledge_sources.json
oracle_knowledge/: common.py  indexing.py  semantic_normalization.py  semantic_vectorization.py  validation.py
oracle_knowledge/collectors/: adf_metadata_collector.py  functional_docs_collector.py  otbi_collector.py  rest_collector.py
oracle_knowledge/linker/: graph_layers.py  knowledge_linker.py
oracle_knowledge/search/: federated_search.py  hybrid_search.py  indexed_store.py  semantic_context.py  semantic_documents.py
rules/: validated_rules.json
tests/: test_adf_cli_credentials.py  test_adf_metadata_accept.py  test_collectors.py  test_federated_search.py  test_graph_layers.py  test_indexing.py  test_multimodule.py  test_pipeline.py  test_semantic_context.py  test_semantic_model_profiles.py  test_semantic_normalization.py  test_semantic_vectorization.py  test_validation.py
